[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12" 
sha2 = "0.10"
libp2p = { version = "0.44"} 
libp2p-ping = "0.44"
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
k256 = { version = "0.12", features = ["serde"]}
hex = "0.4"
lazy_static = "1.4.0"
void = "1.0"
